crates/fluvio-connector-common/ui-test/ui/wrong_rust_type.stderr
error: macro supports only functions and structs
 --> ui-test/ui/wrong_rust_type.rs:4:1
  |
4 | mod start {}
  | ^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> ui-test/ui/wrong_rust_type.rs:4:13
  |
4 | mod start {}
  |             ^ consider adding a `main` function to `$DIR/ui-test/ui/wrong_rust_type.rs`
